[artf497036]Edit option is included in environment popup and success message alignment issue fixed.

--- a/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
+++ b/phresco-framework-web/src/main/webapp/theme/photon/css/phresco_default.css
@@ -2911,6 +2911,10 @@ fieldset {
     width: 100%;
 }
 
+.envFieldset {
+	margin-top: 25px;
+}
+
 .multiselectForWebservice {
 	height: 95px; 
 	width:250px; 
@@ -5837,14 +5841,14 @@ input[class*='chckBxAlign'] {
 	margin-left: 100px;
 }	
 #formEnvironment #envName {
-	width: 385px;
+	width: 290px;
 }
 #formEnvironment #envDesc {
-	min-width: 385px;
+	min-width: 290px;
 }
 #formEnvironment .controls #add {
-	margin-top: 3%;
-    margin-left: 32%;
+	margin-top: 8%;
+    margin-left: 5%;
 }
 ul#display-inline-block-example li#label strong {
 	color: #333;
@@ -6335,3 +6339,9 @@ color: #313131;
 .controls #password {
 	width: 295px !important;
 }
+
+.envLabel {
+	margin-left: 20px;
+    margin-top: -22px;
+    position: relative;
+} 
